--- a/StockAnalysis/Login/ResetPasswordViewController.xib
+++ b/StockAnalysis/Login/ResetPasswordViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,8 +15,11 @@
                 <outlet property="authCodeContainer" destination="mL7-8w-N4f" id="4ix-2u-JMX"/>
                 <outlet property="authCodeTextFiled" destination="rL7-Mh-8gY" id="llK-qY-D3w"/>
                 <outlet property="firstContainer" destination="4yQ-xi-TOS" id="v6G-if-RRc"/>
+                <outlet property="passwordAgainInput" destination="RcW-V7-CHU" id="wiS-ZN-xzZ"/>
+                <outlet property="passwordInput" destination="Vpe-dy-QPI" id="yLD-oG-bwQ"/>
                 <outlet property="secondContainer" destination="VUn-SH-8Uy" id="1jE-rj-CbK"/>
                 <outlet property="userNameTextField" destination="J8i-hu-XbX" id="z3n-st-WaZ"/>
+                <outlet property="verifyInput" destination="c9R-sL-Qf4" id="Vw0-w6-JDQ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -224,6 +227,9 @@
                             <state key="normal" title="确认修改">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                            <connections>
+                                <action selector="clickReset:" destination="-1" eventType="touchUpInside" id="CeM-02-rZp"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="0.94999999999999996" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
