--- a/StockAnalysis/FirstView/UserFirstViewController.xib
+++ b/StockAnalysis/FirstView/UserFirstViewController.xib
@@ -12,6 +12,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UserFirstViewController">
             <connections>
+                <outlet property="adView" destination="YxT-Vh-3FH" id="mSj-z3-60K"/>
+                <outlet property="autoRunActivityView" destination="lc8-pV-M4n" id="9dt-vt-xF6"/>
+                <outlet property="exchangeRMBLabel" destination="jlt-9l-9Tl" id="1IC-hv-7yr"/>
+                <outlet property="exchangeUSDLabel" destination="CKO-bH-MA5" id="5H4-0S-75b"/>
+                <outlet property="randList" destination="7SX-ZS-Ab6" id="wS3-PA-HlO"/>
+                <outlet property="shopRMBLabel" destination="1wT-o6-rV4" id="nj9-YC-hj5"/>
+                <outlet property="shopUSDLabel" destination="NIf-Oy-uJc" id="3mg-C2-FZn"/>
+                <outlet property="usernameLabel" destination="IQ5-Ar-qvg" id="vtX-jD-gph"/>
                 <outlet property="view" destination="qH5-Ld-EgS" id="vC0-Yh-dMn"/>
             </connections>
         </placeholder>
