--- a/StockAnalysis/UserInfo/SetMoneyPasswordViewController.xib
+++ b/StockAnalysis/UserInfo/SetMoneyPasswordViewController.xib
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SetMoneyPasswordViewController">
             <connections>
+                <outlet property="moneyAgainPassword" destination="0bi-Kr-IN2" id="OT3-XQ-6aR"/>
+                <outlet property="moneyPassword" destination="ABM-d8-UCz" id="9aU-GT-K1f"/>
+                <outlet property="verifyInput" destination="fZa-jT-9MU" id="84j-dy-uww"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -48,6 +51,9 @@
                                 <constraint firstAttribute="width" constant="50" id="HiC-3p-Ihm"/>
                             </constraints>
                             <state key="normal" title="Button" image="eye-o"/>
+                            <connections>
+                                <action selector="clickLookPassword:" destination="-1" eventType="touchUpInside" id="B2s-PK-qr2"/>
+                            </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cR7-Om-cgR">
                             <rect key="frame" x="0.0" y="53" width="375" height="1"/>
@@ -99,6 +105,9 @@
                                 <constraint firstAttribute="width" constant="50" id="vT1-1q-K3G"/>
                             </constraints>
                             <state key="normal" title="Button" image="eye-o"/>
+                            <connections>
+                                <action selector="clickAgainPassword:" destination="-1" eventType="touchUpInside" id="O1A-9m-Gy6"/>
+                            </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EnY-Sy-3P2">
                             <rect key="frame" x="0.0" y="53" width="375" height="1"/>
@@ -150,6 +159,9 @@
                                 <constraint firstAttribute="width" constant="50" id="O7L-KW-J4g"/>
                             </constraints>
                             <state key="normal" title="60s"/>
+                            <connections>
+                                <action selector="clickVerify:" destination="-1" eventType="touchUpInside" id="jSn-WK-dbV"/>
+                            </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vql-4J-rsE">
                             <rect key="frame" x="0.0" y="53" width="375" height="1"/>
@@ -199,6 +211,9 @@
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="NO"/>
                     </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="clickResetPassword:" destination="-1" eventType="touchUpInside" id="72b-dn-601"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.97741256476683935" green="0.97741256476683935" blue="0.97741256476683935" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
