--- a/StockAnalysis/UserInfo/SetMoneyPasswordViewController.xib
+++ b/StockAnalysis/UserInfo/SetMoneyPasswordViewController.xib
@@ -80,13 +80,13 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EKu-S2-TED" userLabel="再次输入">
                     <rect key="frame" x="0.0" y="74" width="375" height="55"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="再次输入" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0FF-xd-sGS">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="邮箱验证码" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0FF-xd-sGS">
                             <rect key="frame" x="25" y="8" width="79" height="39"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="39" id="TSP-n5-bd7"/>
                                 <constraint firstAttribute="width" constant="79" id="yOq-FU-Q3u"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
