--- a/StockAnalysis/Analysis/AnaysisSearchViewController.xib
+++ b/StockAnalysis/Analysis/AnaysisSearchViewController.xib
@@ -21,17 +21,13 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="dpT-Gv-8xt">
+                <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dpT-Gv-8xt">
                     <rect key="frame" x="0.0" y="20" width="375" height="56"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <textInputTraits key="textInputTraits"/>
                 </searchBar>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <constraints>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="dpT-Gv-8xt" secondAttribute="trailing" id="ASk-aM-zNW"/>
-                <constraint firstItem="dpT-Gv-8xt" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="nEA-M0-mcl"/>
-                <constraint firstItem="dpT-Gv-8xt" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="vGU-Ov-FtI"/>
-            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="31.5" y="68.5"/>
         </view>
