--- a/StockAnalysis/UserInfo/FeedBack/FeedbackEditVC.xib
+++ b/StockAnalysis/UserInfo/FeedBack/FeedbackEditVC.xib
@@ -13,9 +13,13 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FeedbackEditVC">
             <connections>
                 <outlet property="commitBtn" destination="hYD-7Y-YJy" id="qQi-J1-sWO"/>
+                <outlet property="firstClosebtn" destination="Tgl-ef-fAD" id="HlD-PV-LEE"/>
+                <outlet property="headerV" destination="WrZ-8Q-BLy" id="99g-Gs-PJx"/>
+                <outlet property="headerV1" destination="jdf-0H-IGC" id="OkS-3P-Fkc"/>
                 <outlet property="mailField" destination="d5U-Ec-ieC" id="ebD-wc-zg1"/>
                 <outlet property="phoneField" destination="O74-XN-Lm4" id="jYy-el-TbS"/>
                 <outlet property="questionTextView" destination="MX0-OP-dQE" id="NNh-nB-0o5"/>
+                <outlet property="secondCloseBtn" destination="CKy-eP-zmV" id="LAO-pr-Hvd"/>
                 <outlet property="topLab1" destination="a8a-Df-NhB" id="Kpe-FK-4Cc"/>
                 <outlet property="topLab2" destination="hvC-ij-zJl" id="cs9-EC-IES"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -55,6 +59,32 @@
                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7nc-SP-XIO" userLabel="picContainer">
                             <rect key="frame" x="0.0" y="94" width="375" height="66"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="jia" translatesAutoresizingMaskIntoConstraints="NO" id="WrZ-8Q-BLy" userLabel="header">
+                                    <rect key="frame" x="25" y="6" width="55" height="55"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </imageView>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="jia" translatesAutoresizingMaskIntoConstraints="NO" id="jdf-0H-IGC" userLabel="header">
+                                    <rect key="frame" x="101" y="6" width="55" height="55"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </imageView>
+                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tgl-ef-fAD" userLabel="close1">
+                                    <rect key="frame" x="71" y="0.0" width="16" height="16"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal" title="Button" image="close"/>
+                                    <connections>
+                                        <action selector="clickCloseFirstPic:" destination="-1" eventType="touchUpInside" id="Y09-eF-0ct"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CKy-eP-zmV" userLabel="close2">
+                                    <rect key="frame" x="147" y="0.0" width="16" height="16"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <state key="normal" title="Button" image="close"/>
+                                    <connections>
+                                        <action selector="clickCloseSecondPic:" destination="-1" eventType="touchUpInside" id="Nzf-xX-ZLV"/>
+                                    </connections>
+                                </button>
+                            </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                     </subviews>
@@ -144,5 +174,7 @@
     </objects>
     <resources>
         <image name="Page next" width="18" height="31"/>
+        <image name="close" width="32" height="32"/>
+        <image name="jia" width="110" height="110"/>
     </resources>
 </document>
